--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -39,7 +39,7 @@ const designKitJson = JSON.stringify(designKits).replace(/</g, '\\u003c');
 							<p>{kit.detail}</p>
 						</div>
 						<div class="design-actions">
-							<button type="button" class="preview-btn btn-pill alt" data-kit={kit.id}>
+							<button type="button" class="preview-btn btn-pill alt pink-text" data-kit={kit.id}>
 								Anteprima
 							</button>
 						</div>
@@ -63,7 +63,7 @@ const designKitJson = JSON.stringify(designKits).replace(/</g, '\\u003c');
 							<span>Password</span>
 							<input type="password" name="password" autocomplete="off" required />
 						</label>
-						<button type="submit" class="btn-pill">INVIO</button>
+						<button type="submit" class="btn-pill alt pink-text">INVIO</button>
 					</form>
 					<p class="modal-feedback" role="status"></p>
 				</div>
