--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -26,7 +26,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <link rel="preload" href="/fonts/Higuen Serif.otf" as="font" type="font/otf" crossorigin />
 
 <!-- Canonical URL -->
-<link rel="canonical" href={canonicalURL} />
+<link rel="canonical" href={canonicalURL.href} />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
